docs/book/samples/ch11/sealed.out
error[name]: unknown name `ride_km`
  --> sealed/main.kso:3:9
   3 | print "{ride_km 1.0 2.0}"
               ^
